# icebreaker

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/: FUNDING.yml
.github/workflows/: docker.yml  dockerize.yml  lint.yml  test.yml
core/: Cargo.toml
core/src/: assistant.rs  chat.rs  directory.rs  lib.rs  model.rs  plan.rs  request.rs  settings.rs  web.rs
core/src/chat/: schema.rs
core/src/chat/schema/: decode.rs  encode.rs  old.rs
docker/: rocm.Dockerfile
fonts/: icebreaker-icons.toml
src/: assistant.rs  browser.rs  config.rs  data.rs  icon.rs  main.rs  screen.rs  theme.rs  ui.rs  widget.rs
src/data/: assistant.rs  chat.rs  plan.rs
src/data/chat/: schema.rs
src/screen/: boot.rs  conversation.rs  search.rs  settings.rs
src/ui/: markdown.rs  plan.rs  reasoning.rs  reply.rs
src/widget/: diffused_text.rs  sidebar.rs
