[package]
name = "icebreaker"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector@hecrj.dev>"]
edition = "2021"
description = "A local AI chat app powered by 🦀Rust, 🧊iced, 🤗Hugging Face, and 🦙llama.cpp "
license = "MIT"
repository = "https://github.com/hecrj/icebreaker"

[dependencies]
icebreaker_core.workspace = true
iced_palace.workspace = true
itertools.workspace = true
log.workspace = true
open.workspace = true
rand.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

iced.workspace = true
iced.features = ["tokio", "sipper", "svg", "markdown", "highlighter", "system", "debug"]

[build-dependencies]
iced_fontello = "0.13"

[workspace]
members = ["core"]

[workspace.dependencies]
icebreaker_core.path = "./core"

chrono = "0.4"
decoder = "0.0.3"
dirs = "6.0"
function = "0.2"
futures = "0.3"
iced = "0.14.0-dev"
iced_palace = "0.14.0-dev"
itertools = "0.13"
log = "0.4"
open = "5.2"
rand = "0.9"
reqwest = "0.12"
scraper = "0.22"
serde = "1.0"
serde_json = "1.0"
sipper = "0.1"
thiserror = "1.0"
tokio = "1.38"
tokio-stream = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
uuid = "1.10"

[patch.crates-io]
iced.git = "https://github.com/iced-rs/iced.git"
iced.rev = "d1e936fb2551d75ff9d54dc63e38d6e6eaeb8131"

iced_core.git = "https://github.com/iced-rs/iced.git"
iced_core.rev = "d1e936fb2551d75ff9d54dc63e38d6e6eaeb8131"

iced_palace.git = "https://github.com/hecrj/iced_palace"
iced_palace.rev = "7d9364bd0530927d5cfc0eb70866075e51f54f58"
