[package]
name = "icebreaker"
description = "A local AI chat app powered by 🦀Rust, 🧊iced, 🤗Hugging Face, and 🦙llama.cpp "
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
icebreaker_core.workspace = true
function.workspace = true
itertools.workspace = true
log.workspace = true
rand.workspace = true
rfd.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
webbrowser.workspace = true

iced.workspace = true
iced.features = ["tokio", "sipper", "svg", "markdown", "highlighter", "sysinfo", "crisp", "debug"]

iced_palace.workspace = true
iced_palace.features = ["rand"]

[build-dependencies]
iced_fontello = "0.14"

[lints]
workspace = true

[workspace]
members = ["core"]

[workspace.package]
version = "2026.2.0"
authors = ["Héctor Ramón Jiménez <hector@hecrj.dev>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/hecrj/icebreaker"

[workspace.dependencies]
icebreaker_core = { version = "2026.2.0", path ="./core" }

chrono = "0.4"
decoder = "0.0.3"
directories = "6.0"
function = "0.2"
futures = "0.3"
iced = "0.14"
iced_palace = "0.14"
itertools = "0.13"
llama-server = "0.1.0"
log = "0.4"
rand = "0.9"
reqwest = "0.13"
rfd = "0.15"
scraper = "0.22"
serde = "1.0"
serde_json = "1.0"
sipper = "0.1"
thiserror = "1.0"
tokio = "1.38"
tokio-stream = "0.1"
toml = "0.9"
tracing-subscriber = "0.3"
url = "2.5"
uuid = "1.10"
webbrowser = "1.0"

[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
unsafe_code = "deny"
unused_results = "deny"

[workspace.lints.clippy]
large-enum-variant = "allow"

# [patch.crates-io]
# iced.git = "https://github.com/iced-rs/iced.git"
# iced.rev = "efb12cad2033c64ea44df549b5bddc2bbeb1a4ed"

# iced_core.git = "https://github.com/iced-rs/iced.git"
# iced_core.rev = "efb12cad2033c64ea44df549b5bddc2bbeb1a4ed"

# iced_widget.git = "https://github.com/iced-rs/iced.git"
# iced_widget.rev = "efb12cad2033c64ea44df549b5bddc2bbeb1a4ed"

# iced_palace.git = "https://github.com/hecrj/iced_palace.git"
# iced_palace.rev = "e4de01dc22b06e6a50bfb319018dcbf41e259e78"

# llama-server.git = "https://github.com/hecrj/llama-server.git"
# llama-server.rev = "e7e016577ce11ff419628f5eca23732949990894"

# iced.path = "../../iced"
# iced_core.path = "../../iced/core"
# iced_widget.path = "../../iced/widget"
