[package]
name = "icebreaker_core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono.workspace = true
chrono.features = ["serde"]

decoder.workspace = true
decoder.features = ["json"]

reqwest.workspace = true
reqwest.features = ["json", "socks", "rustls-tls", "gzip"]

serde.workspace = true
serde.features = ["derive"]

tokio.workspace = true
tokio.features = ["fs", "io-util", "process", "time"]

tokio-stream.workspace = true
tokio-stream.features = ["io-util"]

url.workspace = true
url.features = ["serde"]

uuid.workspace = true
uuid.features = ["v4", "serde"]

futures.workspace = true
serde_json.workspace = true
scraper.workspace = true
dirs.workspace = true
thiserror.workspace = true
log.workspace = true
sipper.workspace = true
