[package]
name = "icebreaker_core"
description = "The pure data types of icebreaker"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
decoder.workspace = true
directories.workspace = true
function.workspace = true
futures.workspace = true
llama-server.workspace = true
log.workspace = true
scraper.workspace = true
serde_json.workspace = true
sipper.workspace = true
thiserror.workspace = true
toml.workspace = true

chrono.workspace = true
chrono.features = ["serde"]

reqwest.workspace = true
reqwest.features = ["query", "json", "socks", "rustls", "gzip"]

serde.workspace = true
serde.features = ["derive"]

tokio.workspace = true
tokio.features = ["fs", "io-util", "process", "time"]

tokio-stream.workspace = true
tokio-stream.features = ["io-util"]

url.workspace = true
url.features = ["serde"]

uuid.workspace = true
uuid.features = ["v4", "serde"]
